[tool.poetry]
name = "atcoder-raivals-chart"
version = "0.1.0"
description = ""
authors = ["atilol <ggrkssk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
notebook = "^7.2.1"
japanize-matplotlib = "^1.1.3"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
